[package]
name        = "grup"
description = "an offline github markdown previewer"
version     = "0.2.0"
authors     = ["razorheadfx <\"felix.girke@tu-dortmund.de\">"]
keywords    = ["grip", "offline", "markdown", "github", "preview"]
categories  = ["command-line-utilities", "visualization"]
repository  = "https://github.com/razorheadfx/grup"
edition     = "2018"
readme      = "README.md"
license-file = "LICENSE"

[dependencies]
# logging
log             = "0.4"
env_logger      = "0.6"
# cmdline parsing
structopt       = "0.3"
# md parser
comrak          = "0.6"
# monitor files
notify         = "5.0.0-pre.2"
# http server
hyper           = "0.13.0-alpha.4"
# tokio = { version = "0.2", features = ["full"] }
tokio-fs        = "0.2.0-alpha.6"
tokio-io        = "0.2.0-alpha.6"
tokio-sync      = "0.2.0-alpha.6"
tokio           = { version = "=0.2.0-alpha.6" }

[[bin]]
name = "grup"
path = "src/grup.rs"
