[package]
name        = "grup"
description = "an offline github markdown previewer"
version     = "0.2.1"
authors     = ["razorheadfx <\"felix.girke@tu-dortmund.de\">"]
keywords    = ["grip", "offline", "markdown", "github", "preview"]
categories  = ["command-line-utilities", "visualization"]
repository  = "https://github.com/razorheadfx/grup"
edition     = "2018"
readme      = "README.md"
license-file = "LICENSE"

[dependencies]
# logging
log             = "0.4"
env_logger      = "0.9"
# cmdline parsing
structopt       = "0.3"
# md parser
comrak          = "0.12"
# monitor files
notify         = "5.0.0-pre.13"
# http server
hyper           = { version = "0.14", features = ["full"] }
tokio           = { version = "1.13", features = ["full"] }

[[bin]]
name = "grup"
path = "src/grup.rs"
