[package]
name        = "grup"
description = "an offline github markdown previewer"
version     = "0.2.2"
authors     = ["razorheadfx <\"felix.girke@tu-dortmund.de\">"]
keywords    = ["grip", "offline", "markdown", "github", "preview"]
categories  = ["command-line-utilities", "visualization"]
repository  = "https://github.com/razorheadfx/grup"
edition     = "2018"
readme      = "README.md"
license-file = "LICENSE"

[dependencies]
# logging
log             = "0.4.17"
env_logger      = "0.9.0"
# cmdline parsing
structopt       = "0.3.26"
# md parser
comrak          = "0.13.0"
# monitor files
notify         = "5.0.0-pre.13"
# http server
hyper           = { version = "0.14.19", features = ["full"] }
tokio           = { version = "1.20.3", features = ["full"] }

[[bin]]
name = "grup"
path = "src/grup.rs"
